Bug 1080017 - Don't send Geolocation messages during shutdown. r=jdm